scaffolding header image

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Bootstrap Freelancer</title>
 </head>
-<body>
+<body class="debug">
     <!-- Main menu -->
     <header>
         <nav class="container">
-            <ul class="row justify-content-between align-items-center list-unstyled">
+            <ul class="row justify-content-between align-items-center list-unstyled mb-0">
                 <li class="col"><a href="#">Logo</a></li> 
                 <li class="col text-end">
                     <a href="#">Menu</a>
@@ -27,5 +27,26 @@
         </nav>
     </header>
     <!-- /Main menu -->
+    <main>
+        <!-- Section Header image -->
+        <section class="header-image">
+            <div class="container text-center py-5">
+                <img src="#" class="profile-photo mx-auto mb-4 d-block" alt="Profile image">
+                <h1 class="text-uppercase">Start Bootstrap</h1>
+                <div class="d-flex justify-content-center align-items-center mb-3">
+                    <hr class="star-line">
+                    <div class="star-ico mx-2">Stella</div>
+                    <hr class="star-line">
+                </div>
+                <h3 class="text-uppercase">Graphic artist - Web designer - Illustrator</h3>
+            </div>
+        </section>
+        <!-- /Section Header image -->
+        <!-- Sectione Portfolio -->
+        <section>
+
+        </section>
+        <!-- /Sectione Portfolio -->
+    </main>
 </body>
 </html>
