edit class name

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <!-- /Main menu -->
     <main>
         <!-- Section Header image -->
-        <section class="header-image">
+        <section class="cc_header-image">
             <div class="container text-center py-5">
-                <img src="#" class="profile-photo mx-auto mb-4 d-block" alt="Profile image">
+                <img src="#" class="cc_profile-photo mx-auto mb-4 d-block" alt="Profile image">
                 <h1 class="text-uppercase">Start Bootstrap</h1>
                 <div class="d-flex justify-content-center align-items-center mb-3">
-                    <hr class="star-line">
-                    <div class="star-ico mx-2">Stella</div>
-                    <hr class="star-line">
+                    <hr class="cc_star-line">
+                    <div class="cc_star-ico mx-2">Stella</div>
+                    <hr class="cc_star-line">
                 </div>
                 <h3 class="text-uppercase">Graphic artist - Web designer - Illustrator</h3>
             </div>
@@ -44,7 +44,11 @@
         <!-- /Section Header image -->
         <!-- Sectione Portfolio -->
         <section>
-
+            <div class="d-flex justify-content-center align-items-center mb-3">
+                <hr class="cc_star-line">
+                <div class="cc_star-ico mx-2">Stella</div>
+                <hr class="cc_star-line">
+            </div>
         </section>
         <!-- /Sectione Portfolio -->
     </main>
