--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="debug">
     <!-- Main menu -->
     <header>
-        <nav class="container">
+        <nav class="container-lg">
             <ul class="row justify-content-between align-items-center list-unstyled mb-0">
                 <li class="col"><a href="#">Logo</a></li> 
                 <li class="col text-end">
@@ -29,8 +29,8 @@
     <!-- /Main menu -->
     <main>
         <!-- Section Header image -->
-        <section class="cc_header-image">
-            <div class="container text-center py-5">
+        <section id="header-image">
+            <div class="container-lg text-center py-5">
                 <img src="#" class="cc_profile-photo mx-auto mb-4 d-block" alt="Profile image">
                 <h1 class="text-uppercase">Start Bootstrap</h1>
                 <div class="d-flex justify-content-center align-items-center mb-3">
@@ -43,14 +43,62 @@
         </section>
         <!-- /Section Header image -->
         <!-- Sectione Portfolio -->
-        <section>
+        <section id="portfolio" class="container-lg py-5">
+            <h2 class="text-center">Portfolio</h2>
             <div class="d-flex justify-content-center align-items-center mb-3">
                 <hr class="cc_star-line">
                 <div class="cc_star-ico mx-2">Stella</div>
                 <hr class="cc_star-line">
             </div>
+            <div class="row g-4 gy-lg-5 gy-xl-4 justify-content-center justify-content-lg-between">
+                <div class="col-lg-6 col-xl-4"><span class="cc_placeholder rounded">IMG</span></div>
+                <div class="col-lg-6 col-xl-4"><span class="cc_placeholder rounded">IMG</span></div>
+                <div class="col-lg-6 col-xl-4"><span class="cc_placeholder rounded">IMG</span></div>
+                <div class="col-lg-6 col-xl-4"><span class="cc_placeholder rounded">IMG</span></div>
+                <div class="col-lg-6 col-xl-4"><span class="cc_placeholder rounded">IMG</span></div>
+                <div class="col-lg-6 col-xl-4"><span class="cc_placeholder rounded">IMG</span></div>
+            </div>
         </section>
         <!-- /Sectione Portfolio -->
+        <!-- Sectione About -->
+        <section id="about" class="py-5">
+            <div class="container-lg">
+                <h2 class="text-center text-uppercase">About</h2>
+                <div class="d-flex justify-content-center align-items-center mb-3">
+                    <hr class="cc_star-line">
+                    <div class="cc_star-ico mx-2">Stella</div>
+                    <hr class="cc_star-line">
+                </div>
+                <div class="row row-cols-1 row-cols-lg-2 mx-5">
+                    <div class="col">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sed dolore, nulla deleniti ex illum quidem tempore quaerat cum modi? Itaque perferendis enim est debitis ducimus aperiam tenetur eligendi fugiat.</p>
+                    </div>
+                    <div class="col">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sed dolore, nulla deleniti ex illum quidem tempore quaerat cum modi? Itaque perferendis enim est debitis ducimus aperiam tenetur eligendi fugiat.</p>
+                    </div>
+                </div>
+                <button type="button" class="btn btn-outline-light d-block mx-auto">Download</button>
+            </div>
+        </section>
+        <!-- /Sectione About -->
+        <!-- Sectione Contact me -->
+        <section id="contact" class="py-5">
+            <div class="container-lg">
+                <h2 class="text-center text-uppercase">Contect me</h2>
+                <div class="d-flex justify-content-center align-items-center mb-3">
+                    <hr class="cc_star-line">
+                    <div class="cc_star-ico mx-2">Stella</div>
+                    <hr class="cc_star-line">
+                </div>
+                <div class="row mx-5">
+                    <div class="col">
+                        <span class="text-center">FORM</span>
+                        <button type="button" class="btn btn-success">Send</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- /Sectione Contact me -->
     </main>
 </body>
 </html>
