--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <!-- Sectione Contact me -->
         <section id="contact" class="py-5">
             <div class="container-lg">
-                <h2 class="text-center text-uppercase">Contect me</h2>
+                <h2 class="text-center text-uppercase">Contact me</h2>
                 <div class="d-flex justify-content-center align-items-center mb-3">
                     <hr class="cc_star-line">
                     <div class="cc_star-ico mx-2">Stella</div>
@@ -92,13 +92,34 @@
                 </div>
                 <div class="row mx-5">
                     <div class="col">
-                        <span class="text-center">FORM</span>
-                        <button type="button" class="btn btn-success">Send</button>
+                        <span class="text-center d-block">FORM</span>
+                        <button type="button" class="btn btn-success d-block mx-auto">Send</button>
                     </div>
                 </div>
             </div>
         </section>
         <!-- /Sectione Contact me -->
     </main>
+    <footer>
+        <!-- Section Location -->
+        <section id="location" class="py-5">
+            <div class="container-lg">
+                <div class="row row-cols-1 row-cols-lg-3 justify-content-center text-center">
+                    <div class="col">
+                        <p>ADDRESS</p>
+                    </div>
+                    <div class="col">
+                        <p>SOCIAL</p>
+                    </div>
+                    <div class="col">
+                        <p>COPY</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="copyright" class="d-flex justify-content-center align-items-center">
+            <small>Copyright Your Website 2019</small>
+        </section>
+    </footer>
 </body>
 </html>
