css code split and comp star separator

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- /Bootstrap -->
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- /Font Awesome -->
     <link rel="stylesheet" href="css/style.css">
     <title>Bootstrap Freelancer</title>
 </head>
@@ -31,14 +34,16 @@
         <!-- Section Header image -->
         <section id="header-image">
             <div class="container-lg text-center py-5">
-                <img src="#" class="cc_profile-photo mx-auto mb-4 d-block" alt="Profile image">
-                <h1 class="text-uppercase">Start Bootstrap</h1>
-                <div class="d-flex justify-content-center align-items-center mb-3">
-                    <hr class="cc_star-line">
-                    <div class="cc_star-ico mx-2">Stella</div>
-                    <hr class="cc_star-line">
+                <div class="row">
+                    <div class="col col-lg-8 mx-auto">
+                        <img src="#" class="cc_profile-photo mb-4" alt="Profile image">
+                        <h1 class="text-uppercase">Start Bootstrap</h1>
+                        <div class="star-separator">
+                            <span><i class="fa-solid fa-star"></i></span>
+                        </div>
+                        <h3 class="text-uppercase">Graphic artist - Web designer - Illustrator</h3>
+                    </div>
                 </div>
-                <h3 class="text-uppercase">Graphic artist - Web designer - Illustrator</h3>
             </div>
         </section>
         <!-- /Section Header image -->
