--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="col col-lg-8 mx-auto">
                         <img src="#" class="cc_profile-photo mb-4" alt="Profile image">
                         <h1 class="text-uppercase">Start Bootstrap</h1>
-                        <div class="star-separator">
+                        <div class="star-separator my-4">
                             <span><i class="fa-solid fa-star"></i></span>
                         </div>
                         <h3 class="text-uppercase">Graphic artist - Web designer - Illustrator</h3>
@@ -49,11 +49,13 @@
         <!-- /Section Header image -->
         <!-- Sectione Portfolio -->
         <section id="portfolio" class="container-lg py-5">
-            <h2 class="text-center">Portfolio</h2>
-            <div class="d-flex justify-content-center align-items-center mb-3">
-                <hr class="cc_star-line">
-                <div class="cc_star-ico mx-2">Stella</div>
-                <hr class="cc_star-line">
+            <div class="row">
+                <div class="col col-lg-8 mx-auto">
+                    <h2 class="text-center">Portfolio</h2>
+                    <div class="star-separator color-2 mb-3">
+                        <span><i class="fa-solid fa-star"></i></span>
+                    </div>
+                </div>
             </div>
             <div class="row g-4 gy-lg-5 gy-xl-4 justify-content-center justify-content-lg-between">
                 <div class="col-lg-6 col-xl-4"><span class="cc_placeholder rounded">IMG</span></div>
@@ -68,11 +70,13 @@
         <!-- Sectione About -->
         <section id="about" class="py-5">
             <div class="container-lg">
-                <h2 class="text-center text-uppercase">About</h2>
-                <div class="d-flex justify-content-center align-items-center mb-3">
-                    <hr class="cc_star-line">
-                    <div class="cc_star-ico mx-2">Stella</div>
-                    <hr class="cc_star-line">
+                <div class="row">
+                    <div class="col col-lg-8 mx-auto">
+                        <h2 class="text-center text-uppercase">About</h2>
+                        <div class="star-separator mb-3">
+                            <span><i class="fa-solid fa-star"></i></span>
+                        </div>
+                    </div>
                 </div>
                 <div class="row row-cols-1 row-cols-lg-2 mx-5">
                     <div class="col">
@@ -89,11 +93,13 @@
         <!-- Sectione Contact me -->
         <section id="contact" class="py-5">
             <div class="container-lg">
-                <h2 class="text-center text-uppercase">Contact me</h2>
-                <div class="d-flex justify-content-center align-items-center mb-3">
-                    <hr class="cc_star-line">
-                    <div class="cc_star-ico mx-2">Stella</div>
-                    <hr class="cc_star-line">
+                <div class="row">
+                    <div class="col col-lg-8 mx-auto">                 
+                        <h2 class="text-center text-uppercase">Contact me</h2>
+                        <div class="star-separator color-2 mb-3">
+                            <span><i class="fa-solid fa-star"></i></span>
+                        </div>
+                    </div>
                 </div>
                 <div class="row mx-5">
                     <div class="col">
