--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="container-lg text-center py-5">
                 <div class="row">
                     <div class="col col-lg-8 mx-auto">
-                        <img src="#" class="cc_profile-photo mb-4" alt="Profile image">
+                        <img src="img/avatar.svg" class="cc_profile-photo mb-4" alt="Profile image">
                         <h1 class="text-uppercase">Start Bootstrap</h1>
                         <div class="star-separator my-4">
                             <span><i class="fa-solid fa-star"></i></span>
@@ -61,8 +61,8 @@
         <section id="portfolio" class="container-lg py-5">
             <div class="row">
                 <div class="col col-lg-8 mx-auto">
-                    <h2 class="text-center">Portfolio</h2>
-                    <div class="star-separator color-2 mb-3">
+                    <h2 class="text-center text-uppercase">Portfolio</h2>
+                    <div class="star-separator color-2 mt-4 mb-3">
                         <span><i class="fa-solid fa-star"></i></span>
                     </div>
                 </div>
