--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
                 </div>
             </div>
             <div class="row g-4 gy-lg-5 gy-xl-4 justify-content-center justify-content-lg-between">
-                <div class="col-lg-6 col-xl-4"><span class="cc_placeholder rounded">IMG</span></div>
-                <div class="col-lg-6 col-xl-4"><span class="cc_placeholder rounded">IMG</span></div>
-                <div class="col-lg-6 col-xl-4"><span class="cc_placeholder rounded">IMG</span></div>
-                <div class="col-lg-6 col-xl-4"><span class="cc_placeholder rounded">IMG</span></div>
-                <div class="col-lg-6 col-xl-4"><span class="cc_placeholder rounded">IMG</span></div>
-                <div class="col-lg-6 col-xl-4"><span class="cc_placeholder rounded">IMG</span></div>
+                <div class="col-lg-6 col-xl-4"><img src="img/cabin.png" class="img-fluid" alt="image"></div>
+                <div class="col-lg-6 col-xl-4"><img src="img/cake.png" class="img-fluid" alt="image"></div>
+                <div class="col-lg-6 col-xl-4"><img src="img/circus.png" class="img-fluid" alt="image"></div>
+                <div class="col-lg-6 col-xl-4"><img src="img/game.png" class="img-fluid" alt="image"></div>
+                <div class="col-lg-6 col-xl-4"><img src="img/safe.png" class="img-fluid" alt="image"></div>
+                <div class="col-lg-6 col-xl-4"><img src="img/submarine.png" class="img-fluid" alt="image"></div>
             </div>
         </section>
         <!-- /Sectione Portfolio -->
@@ -90,10 +90,10 @@
                 </div>
                 <div class="row row-cols-1 row-cols-lg-2 mx-5">
                     <div class="col">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sed dolore, nulla deleniti ex illum quidem tempore quaerat cum modi? Itaque perferendis enim est debitis ducimus aperiam tenetur eligendi fugiat.</p>
+                        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
                     </div>
                     <div class="col">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sed dolore, nulla deleniti ex illum quidem tempore quaerat cum modi? Itaque perferendis enim est debitis ducimus aperiam tenetur eligendi fugiat.</p>
+                        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                     </div>
                 </div>
                 <button type="button" class="btn btn-outline-light d-block mx-auto">Download</button>
