--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="row">
                     <div class="col col-lg-8 mx-auto">
                         <h2 class="text-center text-uppercase">About</h2>
-                        <div class="star-separator mb-3">
+                        <div class="star-separator mt-4 mb-3">
                             <span><i class="fa-solid fa-star"></i></span>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
                         <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                     </div>
                 </div>
-                <button type="button" class="btn btn-outline-light d-block mx-auto">Download</button>
+                <button type="button" class="btn btn-outline-light d-block mx-auto"><i class="fa-solid fa-download"></i> Download</button>
             </div>
         </section>
         <!-- /Sectione About -->
