--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Bootstrap Freelancer</title>
 </head>
-<body class="debug">
+<body class="">
     <!-- Main menu -->
     <header>
         <nav class="navbar navbar-expand-lg container-lg">
@@ -113,6 +113,7 @@
                 </div>
                 <div class="row mx-5">
                     <div class="col">
+                        <!-- Form di contatto-->
                         <form action="get">
                             <div class="mb-1"> 
                                 <label for="name" class="form-label">Name</label>
@@ -130,8 +131,9 @@
                                 <label for="message" class="form-label">Message</label>
                                 <textarea id="message" class="form-control border-0 border-bottom rounded-0" name="message" rows="4" cols="50"></textarea> 
                             </div>
-                        <button type="submit" class="btn btn-success d-block mt-2">Send</button>
-                    </form>
+                            <button type="submit" class="btn btn-success d-block mt-2">Send</button>
+                        </form>
+                        <!-- /Form di contatto-->
                     </div>
                 </div>
             </div>
@@ -143,21 +145,38 @@
         <section id="location" class="py-5">
             <div class="container-lg">
                 <div class="row row-cols-1 row-cols-lg-3 justify-content-center text-center">
-                    <div class="col">
-                        <p>ADDRESS</p>
+                    <!-- Section indirizzo -->
+                    <div class="col mb-2">
+                        <h4>LOCATION</h4>
+                        <p>2215 John Daniel Drive Clark. MO 54243</p>
                     </div>
-                    <div class="col">
-                        <p>SOCIAL</p>
+                    <!-- /Section indirizzo -->
+                    <!-- Section social -->
+                    <div class="col mb-4">
+                        <h4>AROUND THE WEB</h4>
+                        <div class="d-flex justify-content-center social-icon">
+                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
+                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                        </div>
                     </div>
-                    <div class="col">
-                        <p>COPY</p>
+                    <!-- /Section social -->
+                    <!-- Section about freelance -->
+                    <div class="col mb-2">
+                        <h4>ABOUT FREELANCER</h4>
+                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="#">Start Bootstrap</a>.</p>
                     </div>
+                    <!-- /Section about freelance -->
                 </div>
             </div>
         </section>
+        <!-- /Section Location -->
+        <!-- Section Copyright-->
         <section id="copyright" class="d-flex justify-content-center align-items-center">
             <small>Copyright Your Website 2019</small>
         </section>
+        <!-- /Section Copyright-->
     </footer>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
